fix broken css when text is too long

--- a/src/components/Article/style.css
+++ b/src/components/Article/style.css
@@ -22,7 +22,7 @@
 
 .articleview-container {
   margin-left: 35%;
-  width: 500px;
+  width: 600px;
   margin-top: 4%;
   margin-bottom: 50px;
 }
